[package]
name = "eol-deployer"
version = "0.1.0"
edition = "2024"
description = "A tool for deploying new versions of traefik configs"
authors = ["Ari Lerner <me@ari.io>"]
license = "MIT"
documentation = "https://github.com/auser/eol-deployer"
readme = "README.md"
keywords = ["traefik", "deployer", "configs"]
categories = ["development", "tools"]
repository = "https://github.com/auser/eol-deployer"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "time", "rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]

[package.metadata.wix]
upgrade-guid = "8A8F4A85-8DCA-4B86-B907-3C437CABEB0A"
path-guid = "28965098-343C-44BB-9CA4-D81F27A1153A"
license = false
eula = false
# This section is used by cargo-release for release automation.
