[package]
name = "eol-deployer"
version = "0.1.12"
edition = "2021"
description = "A tool for deploying new versions of traefik configs"
authors = ["Ari Lerner <me@ari.io>"]
license = "MIT"
documentation = "https://github.com/auser/eol-deployer"
readme = "README.md"
keywords = ["traefik", "deployer", "configs"]
categories = ["development", "tools"]
repository = "https://github.com/auser/eol-deployer"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "time", "rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
