[package]
name = "traefik-deployer"
version = "0.2.5"
edition = "2021"
description = "A tool for deploying new versions of traefik configs"
authors = ["Ari Lerner <me@ari.io>"]
license = "MIT"
documentation = "https://github.com/auser/traefik-deployer"
readme = "README.md"
keywords = ["traefik", "deployer", "configs"]
repository = "https://github.com/auser/traefik-deployer"
homepage = "https://github.com/auser/traefik-deployer"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["macros", "time", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
